--- a/CFMMCD/Views/Account/EditAccess.cshtml
+++ b/CFMMCD/Views/Account/EditAccess.cshtml
@@ -12,6 +12,7 @@
 
 <div class="center-sm">
     <div class="header"><h1>@ViewBag.Title</h1></div>
+    <hr />
     <!--Alerts-->
     <div class="container-fluid">
         @if (TempData["ErrorMessage"] != null)
@@ -23,23 +24,10 @@
             <div class="alert alert-success alert-dismissable fade in">@TempData["SuccessMessage"]<button class="close" data-dismiss="alert" aria-label="close">&times;</button></div>
         }
     </div>
-    <div class="row">
-        @using (Html.BeginForm())
-        {
-            @Html.AntiForgeryToken()
-            <div class="container-fluid">
-                <div class="col-lg-2 label-container-left">
-                    <label class="form-label" for="menu-item">Username</label>
-                </div>
-                <div class="col-lg-7">
-                    @Html.TextBoxFor(m => m.SearchItem, new { @class = "form-control" })
-                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                </div>
-                <div class="col-lg-1">
-                    <button type="submit" class="btn btn-default" name="command" value="Search"><span class="glyphicon glyphicon-search"></span>&nbsp;Search</button>
-                </div>
-            </div>
-        }
+    <div class="container-fluid">
+        <div class="col-lg-12">
+            <input type="text" class="form-control" placeholder="Search user" id="search_dummy" />
+        </div>
     </div>
     <hr />
     @using (Html.BeginForm("EditAccess", "Account", FormMethod.Post, new { }))
@@ -174,42 +162,31 @@
     }
 </div>
 
-            <!--Search result modal-->
-            <div class="modal fade" id="search-result-modal" role="dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button class="close" data-dismiss="modal">&times;</button>
-                        <h4>Search results</h4>
-                    </div>
-                    @using (Html.BeginForm("DisplaySearchResultEA", "Account", FormMethod.Post, new { }))
-                    {
-                        List<AccountViewModel> MIMList = (List<AccountViewModel>)Session["ViewModelList"];
-                        if (MIMList != null)
-                        {
-                            <div class="modal-body">
-                                @{if (HasSearch == 1 && MIMList != null)
-                        {
-                            foreach (AccountViewModel vm in MIMList)
-                            {
-                                            <button type="submit" class="modal-item-select" name="value" value=@vm.Username>
-                                                <div class="col-lg-3">
-                                                    @vm.Username
-                                                </div>
-                                            </button>
-                                        }
-                                    }
-                                }
-                            </div>
-                                        }
-                                    }
-                </div>
+<!--Search result modal-->
+<div class="modal fade" id="search-result-modal" role="dialog">
+    <div class="modal-content">
+        <div class="modal-header">
+            <button class="close" data-dismiss="modal">&times;</button>
+            <h4>All items</h4>
+            <div class="container-fluid">
+                <input type="search" class="form-control" id="SearchFrontEnd" placeholder="Search user" autofocus />
             </div>
+        </div>
+        @using (Html.BeginForm("EditAccess", "Account", FormMethod.Post, new { }))
+        {
+            HtmlHelper.ClientValidationEnabled = false;
+            <div class="modal-body">
+                @for (int i = 0; i < Model.AccountList.Count(); i++)
+                {
+                    string ActiveInactive = "active";
+                    <button type="submit" class="modal-item-select tr-collapse @Model.AccountList[i] @ActiveInactive" name="value" value=@Model.AccountList[i] >
+                        <div class="col-lg-3">
+                            @Model.AccountList[i]
+                        </div>
+                    </button>
+                }
+            </div>
+        }
+    </div>
+</div>
 
-
-            <script>
-                $(window).ready(function () {
-                    if (@HasSearch === 1) {
-                        $("#search-result-modal").modal('show');
-                    }
-                });
-            </script>
