--- a/CFMMCD/Views/Account/EditAccount.cshtml
+++ b/CFMMCD/Views/Account/EditAccount.cshtml
@@ -3,18 +3,14 @@
 
 @{
     ViewBag.Title = "Edit User Account";
-    int HasSearch = 0;
-    if (TempData["SearchResult"] != null)
-    {
-        HasSearch = (int)TempData["SearchResult"];
-    }
+    HtmlHelper.ClientValidationEnabled = false;
 }
 
 <h1 align="center">@ViewBag.Title</h1>
 <hr />
 <div class="center-sm">
     <!--Alerts-->
-    <div class="container">
+    <div class="container-fluid">
         @if (TempData["ErrorMessage"] != null)
         {
             <div class="alert alert-danger alert-dismissable fade in">@TempData["ErrorMessage"]<button class="close" data-dismiss="alert" aria-label="close">&times;</button></div>
@@ -24,18 +20,11 @@
             <div class="alert alert-success alert-dismissable fade in">@TempData["SuccessMessage"]<button class="close" data-dismiss="alert" aria-label="close">&times;</button></div>
         }
     </div>
-    <div class="row">
-        @using (Html.BeginForm())
-        {
-            @Html.AntiForgeryToken()
-            <div class="col-lg-9">
-                @Html.TextBoxFor(m => m.SearchItem, new { @class = "form-control", @placeholder = "Search Username" })
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            </div>
-            <div class="col-lg-3">
-                <button type="submit" class="btn btn-default" name="command" value="Search"><span class="glyphicon glyphicon-search"></span>&nbsp;Search</button>
-            </div>
-        }
+    <hr />
+    <div class="container-fluid">
+        <div class="col-lg-12">
+            <input type="text" class="form-control" placeholder="Search user" id="search_dummy" />
+        </div>
     </div>
     <hr />
     @using (Html.BeginForm("EditAccount", "Account", FormMethod.Post, new { }))
@@ -45,16 +34,13 @@
         @Html.HiddenFor( m => Model.EditMode, new { @Value = false })
         @Html.HiddenFor( m => Model.UserAccess )
         <div class="form-group">
-            @Html.TextBoxFor(m => m.Username, new { @class = "form-control", @placeholder = "Username" })
-            @Html.ValidationMessageFor(m => m.Username, "", new { @class = "text-danger" })
+            @Html.TextBoxFor(m => Model.Username, new { @class = "form-control", @placeholder = "Username" })
         </div>
         <div class="form-group">
-            @Html.PasswordFor(m => m.Password, new { @class = "form-control", @placeholder = "Password" })
-            @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
+            @Html.PasswordFor(m => Model.Password, new { @class = "form-control", @placeholder = "Password" })
         </div>
         <div class="form-group">
-            @Html.PasswordFor(m => m.PasswordVerify, new { @class = "form-control", @placeholder = "Confirm password" })
-            @Html.ValidationMessageFor(m => m.PasswordVerify, "", new { @class = "text-danger" })
+            @Html.PasswordFor(m => Model.PasswordVerify, new { @class = "form-control", @placeholder = "Confirm password" })
         </div>
         <div class="form-group">
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -72,37 +58,24 @@
     <div class="modal-content">
         <div class="modal-header">
             <button class="close" data-dismiss="modal">&times;</button>
-            <h4>Search results</h4>
+            <h4>All items</h4>
+            <div class="container-fluid">
+                <input type="search" class="form-control" id="SearchFrontEnd" placeholder="Search user" autofocus />
+            </div>
         </div>
-        @using (Html.BeginForm("DisplaySearchResultEAcc", "Account", FormMethod.Post, new { }))
+        @using (Html.BeginForm("EditAccount", "Account", FormMethod.Post, new { } ))
         {
-            List<AccountViewModel> MIMList = (List<AccountViewModel>)Session["ViewModelList"];
-            if (MIMList != null)
-            {
-                <div class="modal-body">
-                    @{if (HasSearch == 1 && MIMList != null)
-                        {
-                            foreach (AccountViewModel vm in MIMList)
-                            {
-                                <button type="submit" class="modal-item-select" name="value" value=@vm.Username>
-                                    <div class="col-lg-3">
-                                        @vm.Username
-                                    </div>
-                                </button>
-                            }
-                        }
-                    }
-                </div>
+            <div class="modal-body">
+                @for (int i = 0; i < Model.AccountList.Count(); i++)
+                {
+                    string ActiveInactive = "active";
+                    <button type="submit" class="modal-item-select tr-collapse @Model.AccountList[i] @ActiveInactive" name="value" value=@Model.AccountList[i] >
+                        <div class="col-lg-3">
+                            @Model.AccountList[i]
+                        </div>
+                    </button>
                 }
-            }
+            </div>
+        }
     </div>
 </div>
-
-
-<script>
-    $(window).ready(function () {
-        if (@HasSearch === 1) {
-            $("#search-result-modal").modal('show');
-        }
-    });
-</script>
