--- a/CFMMCD/Views/ValueMeal/Index.cshtml
+++ b/CFMMCD/Views/ValueMeal/Index.cshtml
@@ -1,12 +1,7 @@
 ﻿@model CFMMCD.Models.ViewModel.ValueMealViewModel
 @using CFMMCD.Models.ViewModel
 
-@{  int j = 0;
-    int HasSearch = 0;
-    if (TempData["SearchResult"] != null)
-    {
-        HasSearch = (int)TempData["SearchResult"];
-    }
+@{
     ViewBag.Title = "Value Meal";
 }
 
@@ -27,23 +22,11 @@
 <!--Main content starts here-->
 <div class="form-horizontal">
 
-    <div class="form-horizontal">
-        @using (Html.BeginForm())
-        {
-            @Html.AntiForgeryToken()
-            <div class="container-fluid">
-                <div class="col-lg-2 col-lg-offset-2">
-                    <label class="form-label" for="menu-item">Value meal name/number</label>
-                </div>
-                <div class="col-lg-5">
-                    @Html.TextBoxFor(m => m.SearchItem, new { @class = "form-control" })
-                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                </div>
-                <div class="col-lg-1">
-                    <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search"></span>&nbsp;Search</button>
-                </div>
-            </div>
-        }
+    <!--Search-->
+    <div class="container-fluid">
+        <div class="col-lg-4 col-lg-offset-2">
+            <input type="text" class="form-control" placeholder="Search value meal" id="search_dummy" />
+        </div>
     </div>
 
     <hr />
@@ -52,7 +35,7 @@
         @using (Html.BeginForm("UpdateDelete", "ValueMeal", FormMethod.Post, new { }))
         {
             <div class="container-fluid">
-                <div class="col-lg-4 col-lg-offset-3">
+                <div class="col-lg-4 col-lg-offset-2">
                     <div class="col-lg-12">
                         @Html.LabelFor(m => Model.VMLNUM, "Value meal number", new { @class = "form-label" })
                         @Html.TextBoxFor(m => Model.VMLNUM, new { @class = "form-control",@type = "number",@maxlength = "6" })
@@ -97,26 +80,31 @@
                             {
                                 for (int i = 0; i < Model.MenuItemList.Count(); i++)
                                 {
+                                    Model.MenuItemList[i].PreviousMIMMIC = Model.MenuItemList[i].MIMMIC;
                                     <!--Generated rows-->
                                     <tr>
                                         <td></td>
-                                        <td> @Html.TextBoxFor(m => Model.MenuItemList[i].MIMMIC, new { @class = "form-control input-sm",@type = "number",@maxlength = "6" }) </td>
-                                        <td> @Html.DisplayFor(m => Model.MenuItemList[i].MIMNAM, new { @class = "form-control input-sm",@maxlength = "6" }) </td>
-                                        <td> @Html.DisplayFor(m => Model.MenuItemList[i].MIMPRI, new { @class = "form-control input-sm",@type = "number", @maxlength = "3" }) </td>
-                                        <td> @Html.DisplayFor(m => Model.MenuItemList[i].MIMPRO, new { @class = "form-control input-sm", @type = "number", @maxlength = "3" }) </td>
-                                        <td>@Html.TextBoxFor(m => Model.MenuItemList[i].VMLQUA, new { @class = "form-control input-sm", @type = "number", @maxlength = "2" })</td>
-                                    </tr>
+                                        <td> 
+                                            @Html.TextBoxFor(m => Model.MenuItemList[i].MIMMIC, new { @class = "tb-select form-control input-sm", @type = "number", @max = "999999" }) 
+                                            @Html.HiddenFor(m => Model.MenuItemList[i].PreviousMIMMIC)
+                                        </td>
+                                        <td> @Html.DisplayFor(m => Model.MenuItemList[i].MIMNAM, new { @class = "form-control input-sm" }) </td>
+                                        <td> @Html.DisplayFor(m => Model.MenuItemList[i].MIMPRI, new { @class = "form-control input-sm" }) </td>
+                                        <td> @Html.DisplayFor(m => Model.MenuItemList[i].MIMPRO, new { @class = "form-control input-sm" }) </td>
+                                        <td>@Html.TextBoxFor(m => Model.MenuItemList[i].VMLQUA, new { @class = "form-control input-sm", @type = "number", @maxlength = "99" })</td>
+                                        <td><button type="button" class="close delete-row">&times;</button></td>
+                                     </tr>
                                 }
                             }
                             <!--Empty row-->
                             <tr>
                                 <td></td>
-                                <td> @Html.TextBoxFor(m => Model.MIMMIC[0], new { @class = "form-control input-sm", @type = "number", @maxlength = "6" }) </td>
-                                <td> @Html.DisplayFor(m => Model.MIMNAM[0], new { @class = "form-control input-sm", @maxlength = "6" }) </td>
-                                <td> @Html.DisplayFor(m => Model.MIMPRI[0], new { @class = "form-control input-sm", @type = "number", @maxlength = "3" }) </td>
-                                <td> @Html.DisplayFor(m => Model.MIMPRO[0], new { @class = "form-control input-sm", @type = "number", @maxlength = "3" }) </td>
-                                <td>@Html.TextBoxFor(m => Model.VMLQUA[0], new { @class = "form-control input-sm", @type = "number", @maxlength = "2" })</td>
-
+                                <td> @Html.TextBoxFor(m => Model.MIMMIC[0], new { @class = "tb-select form-control input-sm", @type = "number", @max = "999999" }) </td>
+                                <td> @Html.DisplayFor(m => Model.MIMNAM[0], new { @class = "form-control input-sm" }) </td>
+                                <td> @Html.DisplayFor(m => Model.MIMPRI[0], new { @class = "form-control input-sm" }) </td>
+                                <td> @Html.DisplayFor(m => Model.MIMPRO[0], new { @class = "form-control input-sm" }) </td>
+                                <td>@Html.TextBoxFor(m => Model.VMLQUA[0], new { @class = "form-control input-sm", @type = "number", @max = "99" })</td>
+                                <td><button type="button" class="close delete-row">&times;</button></td>
                             </tr>
                         }
                     </tbody>
@@ -133,64 +121,115 @@
             <div class="form-inline bottom float" style="right:50px">
                 <button type="submit" name="command" value="Save" class="btn btn-default">Save</button>
             </div>
-                            }
+        }
     </div>
 </div>
 
-<!--Search result modal-->
 <div class="modal fade" id="search-result-modal" role="dialog">
     <div class="modal-content">
         <div class="modal-header">
             <button class="close" data-dismiss="modal">&times;</button>
-            <h4>Search results</h4>
+            <h4>All items</h4>
+            <div class="container-fluid">
+                <input type="search" class="form-control" id="SearchFrontEnd" placeholder="Search value meal" autofocus />
+            </div>
         </div>
-        @using (Html.BeginForm("DisplaySearchResult", "ValueMeal", FormMethod.Post, new { }))
+        @using (Html.BeginForm())
         {
-            List<ValueMealViewModel> VMList = (List<ValueMealViewModel>)Session["ViewModelList"];
-            if (VMList != null)
+            <div class="modal-body">
+                @for (int i = 0; i < Model.ValueMealList.Count(); i++)
+                {
+                    string ActiveInactive = "active";
+                    <button type="submit" class="modal-item-select tr-collapse @Model.ValueMealList[i].VMLNUM @Model.ValueMealList[i].VMLNAM @ActiveInactive" name="value" value=@Model.ValueMealList[i].VMLID >
+                        <div class="col-lg-3">
+                            @Model.ValueMealList[i].VMLNUM
+                        </div>
+                        <div class="col-lg-9">
+                            @Model.ValueMealList[i].VMLNAM
+                        </div>
+                    </button>
+                }
+            </div>
+        }
+    </div>
+</div>
+<!--Search Menu Item Modal-->
+<div class="modal fade" id="search-item-modal" role="dialog">
+    <div class="modal-content">
+        <div class="modal-header">
+            <button class="close" data-dismiss="modal">&times;</button>
+            <h4>Select Menu item</h4>
+            <div class="container-fluid">
+                <input type="search" class="form-control" id="SearchFrontEnd" placeholder="Search value meal" autofocus />
+            </div>
+        </div>
+        <div class="modal-body">
+            @for (int i = 0; i < Model.AllMenuItems.Count(); i++)
             {
-                <div class="modal-body">
-                    @{
-                        if (HasSearch == 1 && VMList != null)
-                        {
-                            foreach (ValueMealViewModel vm in VMList)
-                            {
-                                <button type="submit" class="modal-item-select" name="value" value=@vm.VMLNUM>
-                                    <div class="col-lg-3">
-                                        @vm.VMLNUM
-                                    </div>
-                                    <div class="col-lg-9">
-                                        @vm.VMLNAM
-                                    </div>
-                                </button>
-                            }
-                        }
-                    }
-                </div>
-                            }
-                        }
+                string ActiveInactive = "active";
+                if (Model.AllMenuItems[i].MIMSTA.Equals("1"))
+                {
+                    ActiveInactive = "inactive";
+                }
+                <button type="button" class="modal-item-select tr-collapse @Model.AllMenuItems[i].RIRMIC @Model.AllMenuItems[i].MIMDSC @ActiveInactive" name="value" value=@Model.AllMenuItems[i].RIRMIC data-dismiss="modal">
+                    <div class="col-lg-3">
+                        @Model.AllMenuItems[i].RIRMIC
+                    </div>
+                    <div class="col-lg-9">
+                        @Model.AllMenuItems[i].MIMDSC
+                    </div>
+                </button>
+            }
+        </div>
     </div>
 </div>
 
 <script>
     var index = 0;
+    var TextBoxPressed;
     var newRow = '<tr>'+
                     '<td></td>'+
-                    '<td><input class="form-control input-sm" id="MIMMIC_'+(++index)+'_" name="MIMMIC['+index+']" type="text" value="" /> </td>'+
+                    '<td><input class="tb-select form-control input-sm" id="MIMMIC_'+(++index)+'_" name="MIMMIC['+index+']" type="number" max="999999" value="" /> </td>'+
                     '<td></td>'+
                     '<td></td>'+
                     '<td></td>'+
-                    '<td><input class="form-control input-sm" id="VMLQUA_'+index+'_" name="VMLQUA['+index+']" type="text" value="" /> </td>'+
+                    '<td><input class="form-control input-sm" id="VMLQUA_' + index + '_" name="VMLQUA[' + index + ']" type="number" max="99" value="" /> </td>' +
+                    '<td><button type="button" class="close delete-row">&times;</button></td>' +
                 '</tr>';
 
-    console.log(newRow);
     $(window).ready(function () {
-        if (@HasSearch === 1) {
-            $("#search-result-modal").modal('show');
-        }
 
-        $("#add-row").click(function() {
-            $("tbody").append (newRow);
+        setEventListener();
+        $("#add-row").click(function () {
+            if ($("tbody tr:last-child").children("td").children("input[type=number]").val() != "" || $("tbody tr:last-child").hasClass("hidden")) {
+                $("tbody").append(newRow);
+                setEventListener();
+            }
         });
     });
+
+    function setEventListener() {
+        $(".delete-row").click(function () {
+            var hiddenTr = $("tbody .hidden").length;
+            var totalTr = $("tbody tr").length;
+            if (totalTr - hiddenTr > 1) {
+                $(this).parent().siblings("td").each(function () {
+                    $(this).children("input[type=number]").val("");
+                });
+                $(this).parent().parent("tr").addClass("hidden");
+            }
+        });
+
+
+        $(".tb-select").click(function () {
+            TextBoxPressed = $(this);
+            $("#search-item-modal").modal("show");
+        });
+
+        $(".modal-item-select").click(onItemSelected);
+    }
+
+    function onItemSelected() {
+        TextBoxPressed.val($(this).val());
+    }
 </script>
