--- a/CFMMCD/Views/MenuItemMaster/Index.cshtml
+++ b/CFMMCD/Views/MenuItemMaster/Index.cshtml
@@ -461,12 +461,12 @@
                     {
                         ActiveInactive = "inactive";
                     }
-                    <button type="submit" class="modal-item-select tr-collapse @Model.MenuItemMasterList[i].MIMMIC @Model.MenuItemMasterList[i].MIMNAM @ActiveInactive" name="value" value=@Model.MenuItemMasterList[i].MIMMIC>
+                    <button type="submit" class="modal-item-select tr-collapse @Model.MenuItemMasterList[i].RIRMIC @Model.MenuItemMasterList[i].MIMDSC @ActiveInactive" name="value" value=@Model.MenuItemMasterList[i].RIRMIC>
                         <div class="col-lg-3">
-                            @Model.MenuItemMasterList[i].MIMMIC
+                            @Model.MenuItemMasterList[i].RIRMIC
                         </div>
                         <div class="col-lg-9">
-                            @Model.MenuItemMasterList[i].MIMNAM
+                            @Model.MenuItemMasterList[i].MIMDSC
                         </div>
                     </button>
                 }
