--- a/CFMMCD/Views/ReportGeneration/Index.cshtml
+++ b/CFMMCD/Views/ReportGeneration/Index.cshtml
@@ -417,10 +417,12 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div><br/>
             <div class="form-group">
-                <button type="submit" class="btn btn-default" name="command" value="toPDF">Export to PDF</button>
-                <button type="submit" class="btn btn-default" name="command" value="toExcel">Export as Spreadsheet</button>
+                <div class="dropup">
+                    <button href="#" type="submit" class="btn btn-default" name="command" value="toPDF">Export to PDF</button>
+                    <button type="submit" class="btn btn-default" name="command" value="toExcel">Export as Spreadsheet</button>
+                </div>
             </div>
         </div>
     }
