--- a/CFMMCD/Views/MenuItemMaster/Index.cshtml
+++ b/CFMMCD/Views/MenuItemMaster/Index.cshtml
@@ -147,7 +147,7 @@
                         <div class="col-lg-12">
                             <div class="form-group">
                                 <label class="form-label">Location</label>
-                                @Html.DropDownListFor(m => m.Location, new SelectList(Model.LocationList, "value", "text", Model.Location), new { @class = "form-control input-sm" })
+                                @Html.DropDownListFor(m => Model.Location, new SelectList(Model.LocationList, "value", "text", Model.Location), new { @class = "form-control input-sm" })
                             </div>
                             <div class="form-group">
                                 <label class="form-label">Region</label>
