--- a/CFMMCD/Views/StoreProfile/Index.cshtml
+++ b/CFMMCD/Views/StoreProfile/Index.cshtml
@@ -158,19 +158,17 @@
                 <div class="container-fluid">
                     <div class="form-group">
                         @Html.LabelFor(m => Model.SOFT_SERVE_OR_VANILLA_POWDER_MIX, "Soft serve or vanilla powder mix", new { @class = "form-label" })
-                        @Html.DropDownListFor(m => Model.SOFT_SERVE_OR_VANILLA_POWDER_MIX, new SelectList(
-                        new List<Object>{
-                            new { value = "0" , text = "Soft serve"  },
-                            new { value = "1" , text = "Vanilla powder mix" }
-                        }, "value", "text", Model.SOFT_SERVE_OR_VANILLA_POWDER_MIX), new { @class = "form-control input-sm" })
+                        @Html.DropDownListFor(m => Model.SOFT_SERVE_OR_VANILLA_POWDER_MIX, new SelectList(new List<Object>{
+                                new { value = "0" , text = ""  },
+                                new { value = "SOFTSERVE" , text = "Soft serve"  },
+                                new { value = "VANILLA" , text = "Vanilla powder mix" }}, "value", "text", Model.SOFT_SERVE_OR_VANILLA_POWDER_MIX), new { @class = "form-control input-sm store-attrib" })
                     </div>
                     <div class="form-group">
                         @Html.LabelFor(m => Model.FRESH_OR_FROZEN, "Fresh or frozen", new { @class = "form-label" })
-                        @Html.DropDownListFor(m => Model.FRESH_OR_FROZEN, new SelectList(
-                        new List<Object>{
-                            new { value = "0" , text = "Fresh"  },
-                            new { value = "1" , text = "Frozen" }
-                        }, "value", "text", Model.FRESH_OR_FROZEN), new { @class = "form-control input-sm", @Value = Model.FRESH_OR_FROZEN })
+                       @Html.DropDownListFor(m => Model.FRESH_OR_FROZEN, new SelectList(new List<Object>{
+                                new { value = "0" , text = ""  },
+                                new { value = "FRESH" , text = "Fresh"  },
+                                new { value = "FROZEN" , text = "Frozen" } }, "value", "text", Model.FRESH_OR_FROZEN), new { @class = "form-control input-sm store-attrib" })
                     </div>
                 </div>
             </div>
@@ -179,19 +177,17 @@
                 <div class="container-fluid">
                     <div class="form-group">
                         @Html.LabelFor(m => Model.SIMPLOT_OR_MCCAIN, "Simplot or McCain", new { @class = "form-label" })
-                        @Html.DropDownListFor(m => Model.SIMPLOT_OR_MCCAIN, new SelectList(
-                        new List<Object>{
-                            new { value = "0" , text = "Simplot"  },
-                            new { value = "1" , text = "McCain" }
-                        }, "value", "text", Model.SIMPLOT_OR_MCCAIN), new { @class = "form-control input-sm" })
+                        @Html.DropDownListFor(m => Model.SIMPLOT_OR_MCCAIN, new SelectList(new List<Object>{
+                                new { value = "0" , text = ""  },
+                                new { value = "SIMPLOT" , text = "Simplot"  },
+                                new { value = "MCCAIN" , text = "McCain" } }, "value", "text", Model.SIMPLOT_OR_MCCAIN), new { @class = "form-control input-sm store-attrib" })
                     </div>
                     <div class="form-group">
                         @Html.LabelFor(m => Model.PAPER_OR_PLASTIC, "Paper or plastic", new { @class = "form-label" })
-                        @Html.DropDownListFor(m => Model.PAPER_OR_PLASTIC, new SelectList(
-                        new List<Object>{
-                            new { value = "0" , text = "Paper"  },
-                            new { value = "1" , text = "Plastic" }
-                        }, "value", "text", Model.PAPER_OR_PLASTIC), new { @class = "form-control input-sm" })
+                        @Html.DropDownListFor(m => Model.PAPER_OR_PLASTIC, new SelectList(new List<Object>{
+                                new { value = "0" , text = ""  },
+                                new { value = "PAPER" , text = "Paper"  },
+                                new { value = "PLASTIC" , text = "Plastic" }}, "value", "text", Model.PAPER_OR_PLASTIC), new { @class = "form-control input-sm store-attrib" })
                     </div>
                 </div>
             </div>
@@ -200,11 +196,18 @@
                 <div class="container-fluid">
                     <div class="form-group">
                         @Html.LabelFor(m => Model.MCCORMICK_OR_GSF, "McCormick or GSF", new { @class = "form-label" })
-                        @Html.DropDownListFor(m => Model.MCCORMICK_OR_GSF, new SelectList(
-                        new List<Object>{
-                            new { value = "0" , text = "McCormick"  },
-                            new { value = "1" , text = "GSF" }
-                        }, "value", "text", Model.MCCORMICK_OR_GSF), new { @class = "form-control input-sm" })
+                        @Html.DropDownListFor(m => Model.MCCORMICK_OR_GSF, new SelectList(new List<Object> {
+                                new { value = "0" , text = ""  },
+                                new { value = "MCORMICK" , text = "McCormick"  },
+                                new { value = "GSF" , text = "GSF" }}, "value", "text", "0"), new { @class = "form-control input-sm store-attrib", @Value = Model.MCCORMICK_OR_GSF })
+                    </div>
+
+                    <div class="form-group">
+                        @Html.LabelFor(m => Model.FRESHB_OR_FROZENB, "Fresh buns or Frozen buns", new { @class = "form-label" })
+                        @Html.DropDownListFor(m => Model.FRESHB_OR_FROZENB, new SelectList(new List<Object> {
+                                new { value = "0" , text = ""  },
+                                new { value = "FRESHB" , text = "Fresh buns"  },
+                                new { value = "FROZENB" , text = "Frozen buns" }}, "value", "text", "0"), new { @class = "form-control input-sm store-attrib", @Value = Model.FRESHB_OR_FROZENB })
                     </div>
                 </div>
             </div>
@@ -271,6 +274,29 @@
         $("option[value='@province'").attr("selected", "selected");
         updateCity();
         $("option[value='@city'").attr("selected", "selected");
-    });
 
+        // Store Attribute Select
+        setStoreAttribute();
+        $(".store-attrib").click(function () {
+            $(".store-attrib").not(this).each(function () {
+                $(this).attr("value", "0");
+                $(this).val("0");
+                $(".store-attrib option[value='0']").attr("selected", "selected");
+            });
+            setStoreAttribute();
+        });
+    });
+    /* Sets the color of the dropdown 
+     * depending on the selected value
+     * to have a 'disabled' look
+     */
+    function setStoreAttribute() {
+        $(".store-attrib").each(function () {
+            if ($(this).val() == "0") {
+                $(this).css("background-color", "#eee");
+            } else {
+                $(this).css("background-color", "white");
+            }
+        });
+    }
 </script>
