--- a/CFMMCD/Views/Home/Index.cshtml
+++ b/CFMMCD/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
                 <button role="tab" href="#collapse1" class="btn btn-default btn-blk" type="button" data-toggle="collapse"><span class="glyphicon glyphicon-align-right"></span> All Page</button>
             </div>
             <div class="panel-group" role="tablist">
-                <div class="panel panel-default">
+                <div class="panel panel-default" style="width:20%;">
                     <div id="collapse1" class="panel-collapse collapse">
                         <ul class="list-group">
 
